# n3

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md
.github/workflows/: rust.yml
builder/: Cargo.toml
builder/src/: cache.rs  code.rs  context.rs  error.rs  graph.rs  lib.rs  n3_std.rs  seed.rs  tensor.rs  variable.rs
builder/src/compact/: context.rs  exec.rs  graph.rs  ir_extern.rs  ir_node.rs  mod.rs  tensor.rs  value.rs  variable.rs
builder/src/execs/: ir.rs  mod.rs  program.rs  root.rs
builder/src/execs/var/: core.rs  mod.rs
builder/src/externs/: code.rs  ir.rs  mod.rs  script.rs
builder/src/nodes/: code.rs  ir.rs  mod.rs  root.rs
builder/src/nodes/builder/: graph.rs  mod.rs  node.rs
builder/std/models/vision/: le_net5.n3
builder/std/optim/: adam.py
builder/tests/: test_build.rs  test_reconstruction.rs  test_variables.rs
builder/tests/data/nodes/__user__/sample/: dummy.n3  dummy_image-classification.n3  extern_dummy.py
core/: Cargo.toml
core/src/: error.rs  graph.rs  lib.rs  n3_std.rs  variable.rs
core/std/builtins/: assert_shape.py  concat.py  transform.py
core/std/data/: mnist.n3  mnist.py
core/std/exec/: image_classification.n3  image_classification.py
core/std/optim/: adam.n3
core/tests/: test_reconstruction.rs  test_variables.rs
exec/: Cargo.toml
n3/: Cargo.toml
n3-builder/: Cargo.toml
n3-builder/src/: code.rs  context.rs  error.rs  graph.rs  lib.rs  n3_std.rs  tensor.rs  variable.rs
n3-builder/src/compact/: code.rs  code_extern.rs  context.rs  exec.rs  graph.rs  ir_extern.rs  ir_node.rs  mod.rs  tensor.rs
n3-builder/src/execs/: args.rs  dirs.rs  ir.rs  mod.rs  program.rs  root.rs
n3-builder/src/execs/var/: core.rs  env.rs  global.rs  mod.rs
n3-builder/src/externs/: code.rs  ir.rs  mod.rs  script.rs
n3-builder/src/nodes/: code.rs  ir.rs  mod.rs  root.rs
n3-builder/src/nodes/builder/: graph.rs  node.rs
n3-builder/std/builtins/: assert_shape.py  concat.py  transform.py
n3-builder/std/data/: mnist.py
n3-builder/std/exec/: image_classification.py
n3-builder/std/nn/activation/: dropout.py  relu.py  softmax.py
n3-builder/std/nn/conv/: batch_norm2d.py  conv2d.py  max_pool2d.py
n3-builder/std/nn/linear/: linear.py
n3-builder/std/nn/loss/: cross_entropy.py
n3-builder/std/optim/: adam.py
n3-builder/tests/data/nodes/__user__/sample/: dummy_image-classification.n3  dummy_image_classification.py  extern_dummy.py  test-cat.n3
n3-gui/mobile/: .gitignore  pubspec.yaml
n3-gui/mobile/lib/: main.dart  routes.dart
n3-machine/: Cargo.toml
n3-machine-ffi/: Cargo.toml
n3-machine-ffi/src/: error.rs  handler.rs  lib.rs  smp.rs
n3-machine/src/: error.rs  host.rs  lib.rs
n3-monitor/: Cargo.toml
n3-monitor-core/: Cargo.toml
n3-net/api/: .env  .gitignore  Cargo.toml  Rocket.toml
n3-net/api/migrations/2020-11-16-074836_create_machines/: down.sql  up.sql
n3-net/api/src/: cors.rs  db.rs  error.rs  global.rs  main.rs  schema.rs
n3-net/api/src/model/: machines.rs  mod.rs  response.rs  table.rs  works.rs
n3-net/api/src/view/: machines.rs  mod.rs  works.rs
n3-net/api/src/view/catchers/: c_404.rs  mod.rs
n3-net/client/: Cargo.toml
n3-net/client/src/: lib.rs
n3-net/protocol/: Cargo.toml
n3-net/protocol/src/: lib.rs  request.rs  response.rs
n3-net/server/: Cargo.toml
n3-net/server/src/: lib.rs
n3-parser/: Cargo.toml
n3-parser-ast/: Cargo.toml
n3-parser-ast/src/: fmt.rs  graph.rs  lib.rs  node.rs  variable.rs
n3-parser/src/: error.rs  grammar.lalrpop  lexer.rs  lib.rs  location.rs  parser.rs  token.rs
n3-parser/src/ast/: file.rs  graph.rs  uses.rs  variable.rs
n3-program/: Cargo.toml
n3-program/src/: code.rs  error.rs  graph.rs  lib.rs  nodes.rs  variable.rs
n3-program/src/compact/: code_extern.rs  code_node.rs  context.rs  exec.rs  graph.rs  value.rs  variable.rs
n3-program/src/execs/: dirs.rs  mod.rs  program.rs
n3-program/src/externs/: code.rs  mod.rs  script.rs
n3-torch/: Cargo.toml
n3-torch-core/: Cargo.toml
n3-torch-core-protocol/: Cargo.toml
n3-torch-core-protocol/src/: response.rs
n3-torch-core-server/: Cargo.toml
n3-torch-core-server/src/: main.rs
n3-torch-core/src/: exec.rs  graph.rs  handler.rs  host.rs  lib.rs  process.rs  python.rs
n3-torch-core/src/code/: base.rs  ext.rs  graph.rs  mod.rs  node.rs  out.rs  program.rs  value.rs
n3-torch-core/src/device/: cuda.rs
n3-torch-ffi/: Cargo.toml
n3-torch-ffi-py/: MANIFEST.in  requirements.txt
n3-torch-ffi-py/n3/node/: data.py  exec.py  extern.py  node.py  optim.py
n3-torch-ffi-py/n3/util/: args.py  out.py
n3-torch-ffi-py/n3/writer/: __init__.py
n3-torch-ffi-py/tests/: test_build.py
n3-torch-ffi-python/: MANIFEST.in  requirements.txt  setup.py
n3-torch-ffi-python/n3/node/: __init__.py  node.py  optim.py
n3-torch-ffi-python/n3/util/: dirs.py
n3-torch-ffi-python/n3/writer/: epoch.py
n3-torch-ffi-rs/: Cargo.toml
n3-torch-ffi-rs/src/: lib.rs
n3-torch-ffi/src/: error.rs  lib.rs  machine.rs  pybox.rs  tensor.rs  torch.rs
n3-torch-ffi/src/exec/: mod.rs  trainer.rs
n3-torch-ffi/src/machine/: generic.rs  host.rs  mod.rs
n3-torch-ffi/src/nn/: ext.rs  mod.rs  node.rs  tensor_graph.rs
n3-torch-machine/: Cargo.toml
n3-torch-machine/src/: blocker.rs  exec.rs  host.rs  lib.rs  process.rs  python.rs
n3-torch-machine/src/device/: cuda.rs
n3-torch/client/: Cargo.toml
n3-torch/client/src/: args.rs  exec.rs  handler.rs  main.rs
n3-torch/client/src/code/: base.rs  ext.rs  graph.rs  node.rs  out.rs  program.rs  value.rs
n3-torch/core/: Cargo.toml
n3-torch/core/src/: exec.rs  host.rs  lib.rs  (+2 more)
n3-torch/ffi/rust/: Cargo.toml
n3-torch/ffi/rust/src/: handler.rs  lib.rs
n3-torch/protocol/: Cargo.toml
n3-torch/server/: Cargo.toml
n3-torch/server/src/: handle.rs  host.rs  main.rs  process.rs  python.rs
n3-torch/server/src/device/: base.rs  cpu.rs  cuda.rs
n3-torch/src/: lib.rs  main.rs
n3/src/: args.rs  exec.rs  main.rs  monitor.rs  train.rs
parser/: Cargo.toml
parser/src/: error.rs  grammar.lalrpop  lexer.rs  parser.rs
tests/: test_reconstruction.rs
(+72 files in other folders)
