[package]
name = "n3"
version = "0.1.0"
authors = ["h <besqer996@gnu.ac.kr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
n3-core = { path = "core" }
n3-parser = { path = "parser" }

[workspace]
members = [
    "core",
    "parser",
]
