[workspace]
members = [
    "n3",
    "n3-builder",
    "n3-parser",
    "n3-parser-ast",
    "n3-program",
    "n3-torch/client",
    "n3-torch/core",
    "n3-torch/ffi/rust",
    "n3-torch/protocol",
    "n3-torch/server",
    "n3-machine",
    "n3-machine-ffi",
    "n3-monitor-core",
    "n3-monitor",
]

[profile.release]
codegen-units = 1
lto = true
panic = 'unwind'
