[package]
name = "n3-builder"
version = "0.1.0"
authors = ["h <besqer996@gnu.ac.kr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
n3-parser = { path = "../parser" }

include_dir = "0.6"
Inflector = "0.11"
num-traits = "0.2"

[dev-dependencies]
maplit = "1.0"
