[package]
name = "n3-builder"
version = "0.1.0"
authors = ["h <besqer996@gnu.ac.kr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["cli", "pip"]

cli = ["dialoguer"]
pip = ["n3-torch-ffi"]
test-nightly = []

[dependencies]
n3-parser = { path = "../n3-parser" }
n3-program = { path = "../n3-program" }
n3-torch-ffi = { path = "../n3-torch/ffi/rust" , optional = true }

lazy_static = "1.4"
Inflector = "0.11"

dialoguer = { version = "0.7", optional = true }
dirs = "3.0"
glob = "0.3"

[dev-dependencies]
maplit = "1.0"
