[package]
name = "n3-builder"
version = "0.1.0"
authors = ["h <besqer996@gnu.ac.kr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["pip"]

cli = ["dialoguer"]
pip = []
test-nightly = []

[dependencies]
n3-parser = { path = "../n3-parser" }
n3-program = { path = "../n3-program" }

lazy_static = "1.4"
Inflector = "0.11"

dialoguer = { version = "0.8", optional = true }
dirs = "3.0"
glob = "0.3"

[dev-dependencies]
maplit = "1.0"
