[package]
name = "n3-machine-ffi"
version = "0.1.0"
authors = ["h <ho.kim@gnu.ac.kr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive", "rc"] }

raw_sync = "0.1"
shared_memory = "0.12"
