[package]
name = "n3-program"
version = "0.1.0"
authors = ["h <ho.kim@gnu.ac.kr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
n3-parser-ast = { path = "../n3-parser-ast" }

num-traits = "0.2"

bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
