[package]
name = "n3-torch-core-server"
version = "0.1.0"
authors = ["h <ho.kim@gnu.ac.kr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
n3-torch-core = { path = "../n3-torch-core" }
n3-torch-core-protocol = { path = "../n3-torch-core-protocol" }

simple-socket = "0.1"
