[package]
name = "n3-torch-core"
version = "0.1.0"
authors = ["h <ho.kim@gnu.ac.kr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
n3-machine = { path = "../n3-machine" }
n3-program = { path = "../n3-program" }
n3-torch-ffi = { path = "../n3-torch-ffi-rust" }

ctrlc = "3.1"
pyo3-mp = "0.1"

[dev-dependencies]
n3-builder = { path = "../n3-builder" }
