[package]
name = "n3-torch-ffi"
version = "0.1.0"
authors = ["h <ho.kim@gnu.ac.kr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "n3_torch_ffi"
crate-type = ["rlib", "cdylib"]

[features]
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = "0.12.3"
pyo3-mp = "0.1"

[dev-dependencies]
n3-builder = { path = "../n3-builder" }
n3-torch-machine = { path = "../n3-torch-machine" }
