[package]
name = "n3-torch-machine"
version = "0.1.0"
authors = ["h <ho.kim@gnu.ac.kr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "n3_torch_machine"
crate-type = ["rlib", "cdylib"]

[features]
# default = ["extension-module"]
default = []
extension-module = ["n3-torch-ffi/extension-module"]

[dependencies]
n3-builder = { path = "../n3-builder" }
n3-machine = { path = "../n3-machine" }
n3-torch-ffi = { path = "../n3-torch-ffi" }
