[package]
name = "n3-net-api"
version = "0.1.0"
authors = ["h <ho.kim@gnu.ac.kr>"]
edition = "2018"

[[bin]]
name = "n3-apid"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
n3-builder = { path = "../../n3-builder" }
n3-machine-ffi = { path = "../../n3-machine-ffi" }
n3-net-client = { path = "../../n3-net/client" }

diesel = { version = "1.4", features = ["sqlite"] }
rocket = "0.4"
rocket_contrib = { version = "0.4", default-features = false, features = ["diesel_sqlite_pool", "json"] }
rocket_cors = "0.5"

lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
