[package]
name = "n3-net-client"
version = "0.1.0"
authors = ["h <ho.kim@gnu.ac.kr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
n3-machine-ffi = { path = "../../n3-machine-ffi" }
n3-net-protocol = { path = "../protocol" }

get_if_addrs = "0.5"
simple-socket = { version = "0.1", default-features = false }
