[package]
name = "n3-net-server"
version = "0.1.0"
authors = ["h <ho.kim@gnu.ac.kr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
n3-machine = { path = "../../n3-machine" }
n3-net-protocol = { path = "../protocol" }

simple-socket = "0.1"
