[package]
name = "n3-torch-client"
version = "0.1.0"
authors = ["h"]
edition = "2018"

[[bin]]
name = "n3-torchc"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
n3-machine = { path = "../../n3-machine" }
n3-machine-ffi = { path = "../../n3-machine-ffi" }
n3-program = { path = "../../n3-program" }

pyo3 = { version = "0.14", features = ["auto-initialize"] }
which = "4.0"
