[package]
name = "n3-torch-ffi"
version = "0.1.0"
authors = ["h <ho.kim@gnu.ac.kr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
n3-machine-ffi = { path = "../../../n3-machine-ffi" }

bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
